--- a/KaratePage/index.html
+++ b/KaratePage/index.html
@@ -402,7 +402,7 @@
         <div class="container">
             <div class="footer-location">
                 <h3>Ubicación</h3>
-                <p>Calle Falsa 123, Mar del plata</p>
+                <p>Rodriguez Peña 2842, Mar del plata</p>
             </div>
             <div class="footer-social">
                 <h3>Síguenos en Instagram</h3>
